# flashcard-viewer

./: .gitignore  README.MD  flashcard-viewer.desktop  linux-gnome-install.sh  pyproject.toml  requirements.txt  test.py  test2.py  todo.md
flashcard_viewer/: data_storage.py  flashcard_viewer.py  image_file_browser.py  image_folder_browser.py  storage_errors.py
