[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flashcard-viewer"
version = "2026.03.23"
description = "Displays images flashcard style"
readme = "README.MD"
requires-python = ">=3.14,<3.15"

authors = [
{name = "Justin", email = "dabn5jhy1@mozmail.com"}
]

license = {text = "GPL-3.0-only"}

classifiers = [
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.14",
"Programming Language :: Python :: 3 :: Only",
]

keywords = ["flashcards", "teach", "instructional", "educational",]

dependencies = [
    "Pillow",
    "ttkbootstrap",
    "tomli-w",
]

[project.scripts]
flashcard-viewer = "flashcard_viewer.flashcard_viewer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flashcard_viewer*"]
